# literary-translation

./: .gitignore  README.md  SConstruct  SConstruct.chiasm  SConstruct.intt  custom.py.example  pyproject.toml  requirements.txt
data/STEP/: NT_aligned.json
data/valerius_flaccus/: amores.csv  data.pkl  golds.pkl
new_scripts/: SConstruct  inspect_chiasm.py  score_chiasm.ipynb  score_chiasm.py  test.xlsx  utils.py
new_scripts/fix_ng/: half_neural_chiasm.xlsx  half_ngram_chiasm.xlsx  verse_neural_chiasm.xlsx  verse_ngram_chiasm.xlsx
new_scripts/full_run/: pesucha_neural_chiasm.xlsx  pesucha_neural_chiasm.xlsx.vis  pesucha_ngram_chiasm.xlsx  pesucha_ngram_chiasm.xlsx.vis  setuma_neural_chiasm.xlsx  setuma_neural_chiasm.xlsx.vis  setuma_ngram_chiasm.xlsx  setuma_ngram_chiasm.xlsx.vis  verse_neural_chiasm.xlsx  verse_neural_chiasm.xlsx.vis  verse_ngram_chiasm.xlsx  (+1 more)
new_scripts_IT/: data_checking.ipynb  fetch_data.sh  translate_document.py
notebooks/: align.ipynb  benchmark_vf.ipynb  clean_data.ipynb  clean_passages.ipynb  cohen_kappa.ipynb  context_MBART.ipynb  correlation.ipynb  hierarchical_clustering.ipynb  make_chiasm_visual.ipynb  narrative_epsiodes.ipynb  parse_step copy.ipynb  parse_step.ipynb  sliding_window_chiasm.ipynb  stats_chiasm.ipynb  translation_score_table.ipynb
scripts/: benchmark.py  build_chiasm_score_table.py  build_translation_score_table.py  convert_from_aligned_step.py  convert_from_septuagint.py  convert_from_step.py  convert_from_wlc.py  convert_from_xml.py  create_visuals.py  embed_document.py  find_disputed_passages.py  generate_summary_table.py  inspect_translations.py  make_prompt.py  postprocess.py  score_bleu.py  score_chiasm.py  score_chiasmus.py  score_embeddings.py  score_translation.py  score_translations.py  score_translations_comet.py  summarize_scores.py  translate_document.py  translate_document_aya.py  utils.py  visualize_chiasm.py
(+51 files in other folders)
