[tool.poetry]
package-mode=false
name = "literary-translation"
version = "0.1.0"
description = ""
authors = ["Hope McGovern"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
sentence-transformers = "^3.1.0"
scipy = "^1.14.1"
nltk = "^3.9.1"
iso639 = "^0.1.4"
stopwordsiso = "^0.6.1"
sentencepiece = "^0.2.0"
accelerate = "^0.34.2"
bitsandbytes = "^0.44.0"
evaluate = "^0.4.3"
sacrebleu = "^2.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
